--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "@mantine/core": "8.3.6",
+    "@mantine/dropzone": "^8.3.6",
     "@mantine/hooks": "8.3.6",
+    "@mantine/notifications": "^8.3.6",
     "@tabler/icons-react": "^3.35.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
