--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vitest:watch": "vitest",
     "test": "npm run typecheck && npm run prettier && npm run lint && npm run vitest && npm run build",
     "storybook": "storybook dev -p 6006",
-    "storybook:build": "storybook build"
+    "storybook:build": "storybook build",
+    "upload": "aws s3 cp dist/ s3://insight-ui-assets/ --recursive"
   },
   "dependencies": {
     "@mantine/core": "8.3.6",
